# memos

./: .gitignore
docs/: python-client-proposal.md
memos-python-client/: CHANGELOG.md  LICENSE  README.md  debug_test.py  pyproject.toml  test_installation.py
memos-python-client/examples/: basic_usage.py  quick_start.py
memos-python-client/memos_client/: __init__.py  auth.py  client.py  config.py  exceptions.py
memos-python-client/memos_client/models/: __init__.py  attachment.py  memo.py  user.py
